Crash on drawing with measure tool #95591

Closed
opened 2022-02-07 21:30:47 +01:00 by Alexandr Minakov · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00
Also crashes on MX Linux on the same computer. And on another computer with windows on an intel processor.

Blender Version
Broken: e69020ad0f, 3.0.1, 3.1.0, master
Working: 97c2c39916

Short description of error
Crash if measured with Tweak selection mode.

Exact steps for others to reproduce the error

  • Startup file
  • Select box to Tweak
  • select Measure tool from toolbar
  • Select any of the objects (for example, a camera) and try to quickly measure the distance from the unselected object (cube) to the selected one. If done slowly, it won't crash.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 Also crashes on MX Linux on the same computer. And on another computer with windows on an intel processor. **Blender Version** Broken: e69020ad0f52, 3.0.1, 3.1.0, master Working: 97c2c3991620 **Short description of error** Crash if measured with Tweak selection mode. **Exact steps for others to reproduce the error** - Startup file - Select box to Tweak - select Measure tool from toolbar - Select any of the objects (for example, a camera) and try to quickly measure the distance from the unselected object (cube) to the selected one. If done slowly, it won't crash.

Added subscriber: @Az3Dip

Added subscriber: @Az3Dip
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, Thanks for the report. I can reproduce on current master. Appears to be regression (Will bisect)

blender.exe         :0x00007FF63F0687E0  gizmo_ruler_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_gizmo_ruler.c:1084
blender.exe         :0x00007FF63D19BE40  wm_gizmomap_modal_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_map.c:1147
blender.exe         :0x00007FF63D1B2780  gizmo_tweak_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:420
blender.exe         :0x00007FF63D1B1FA0  gizmo_tweak_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:594
blender.exe         :0x00007FF63D17DFB0  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1339
blender.exe         :0x00007FF63D17CC90  wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1546
blender.exe         :0x00007FF63D16EDE0  WM_operator_name_call_ptr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1594
blender.exe         :0x00007FF63D16ED60  WM_operator_name_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1602
blender.exe         :0x00007FF63F06A680  view3d_ruler_add_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_gizmo_ruler.c:1317
blender.exe         :0x00007FF63D17DFB0  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1339
blender.exe         :0x00007FF63D179390  wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2340
blender.exe         :0x00007FF63D17C490  wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2693
blender.exe         :0x00007FF63D17B650  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3020
blender.exe         :0x00007FF63D17A0F0  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3161
blender.exe         :0x00007FF63D175D40  wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3533
blender.exe         :0x00007FF63D174F60  wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3563
blender.exe         :0x00007FF63D173E80  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3747
blender.exe         :0x00007FF63D149420  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:642
blender.exe         :0x00007FF63D140F40  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:564
blender.exe         :0x00007FF63FC78B70  invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79
blender.exe         :0x00007FF63FC78920  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
blender.exe         :0x00007FF63FC78900  __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331
blender.exe         :0x00007FF63FC78C30  mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17
KERNEL32.DLL        :0x00007FFFDE7C7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFFE00E2630  RtlUserThreadStart
Hi, Thanks for the report. I can reproduce on current master. Appears to be regression (Will bisect) ```lines=10 blender.exe :0x00007FF63F0687E0 gizmo_ruler_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_gizmo_ruler.c:1084 blender.exe :0x00007FF63D19BE40 wm_gizmomap_modal_set C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_map.c:1147 blender.exe :0x00007FF63D1B2780 gizmo_tweak_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:420 blender.exe :0x00007FF63D1B1FA0 gizmo_tweak_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\gizmo\intern\wm_gizmo_group.c:594 blender.exe :0x00007FF63D17DFB0 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1339 blender.exe :0x00007FF63D17CC90 wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1546 blender.exe :0x00007FF63D16EDE0 WM_operator_name_call_ptr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1594 blender.exe :0x00007FF63D16ED60 WM_operator_name_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1602 blender.exe :0x00007FF63F06A680 view3d_ruler_add_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\space_view3d\view3d_gizmo_ruler.c:1317 blender.exe :0x00007FF63D17DFB0 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1339 blender.exe :0x00007FF63D179390 wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2340 blender.exe :0x00007FF63D17C490 wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2693 blender.exe :0x00007FF63D17B650 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3020 blender.exe :0x00007FF63D17A0F0 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3161 blender.exe :0x00007FF63D175D40 wm_event_do_region_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3533 blender.exe :0x00007FF63D174F60 wm_event_do_handlers_area_regions C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3563 blender.exe :0x00007FF63D173E80 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3747 blender.exe :0x00007FF63D149420 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:642 blender.exe :0x00007FF63D140F40 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:564 blender.exe :0x00007FF63FC78B70 invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79 blender.exe :0x00007FF63FC78920 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 blender.exe :0x00007FF63FC78900 __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331 blender.exe :0x00007FF63FC78C30 mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17 KERNEL32.DLL :0x00007FFFDE7C7020 BaseThreadInitThunk ntdll.dll :0x00007FFFE00E2630 RtlUserThreadStart
Pratik Borhade changed title from Crash Measure + Tweak to Crash on drawing with measure tool 2022-02-08 02:12:22 +01:00
Member

Don't think if I can find the exact commit (caught with Linker error when bisecting)
This actually broke between 97c2c39916 - e69020ad0f.
Priority can be raised since it's a regression.

Don't think if I can find the exact commit (caught with Linker error when bisecting) This actually broke between 97c2c3991620 - e69020ad0f52. Priority can be raised since it's a regression.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot repro here for some reason, maybe I am missing something?

**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44
version: 3.2.0 Alpha, branch: master, commit date: 2022-02-07 19:29, hash: `rB674e4640f6a3`

Maybe someone can put up a short screencast shpwing the crash in action?

Cannot repro here for some reason, maybe I am missing something? ``` **System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 version: 3.2.0 Alpha, branch: master, commit date: 2022-02-07 19:29, hash: `rB674e4640f6a3` ``` Maybe someone can put up a short screencast shpwing the crash in action?

crash #95591.gif

![crash #95591.gif](https://archive.blender.org/developer/F12854728/crash_T95591.gif)
Member

#95591-crash.gif

![#95591-crash.gif](https://archive.blender.org/developer/F12854733/T95591-crash.gif)
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Not bisected but suspicious commit is f1a488d0f2
Doesn't happen with Right Click select.
With LMB- crash seems to occur because it attempts to select cube instead of making a draw call of measure tool.
@ideasman42 , can you check?
Raising the priority since it's a regression.

Not bisected but suspicious commit is f1a488d0f2 Doesn't happen with Right Click select. With LMB- crash seems to occur because it attempts to select cube instead of making a draw call of measure tool. @ideasman42 , can you check? Raising the priority since it's a regression.
Campbell Barton self-assigned this 2022-02-28 13:13:44 +01:00

The crash occurs in 3.0 as well on my system, nevertheless it's a serious bug, submitted D14231.

The crash occurs in 3.0 as well on my system, nevertheless it's a serious bug, submitted [D14231](https://archive.blender.org/developer/D14231).

This issue was referenced by ef431a8705

This issue was referenced by ef431a87057d366afe589a1c7b16e83809191ca6

This issue was referenced by 0e51defcf4

This issue was referenced by 0e51defcf42e1cb231d36da9ecc2cc0fbe6ae505

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95591
No description provided.